# binary_clock_cpp

./: CMakeLists.txt
headers/: BinaryClock.hpp  BinaryFromDecimalConverter.hpp  BinaryTimeUnitsHolder.hpp  ClockScreen.hpp  TimeParser.hpp  TimeParserStub.hpp  TimeUnits.hpp
libs/: BinaryClock.cpp  BinaryFromDecimalConverter.cpp  ClockScreen.cpp  TimeParser.cpp  TimeUnits.cpp
src/: main.cpp
tests/: BinaryClock-ut.cpp  BinaryFromDecimalConverter-ut.cpp  ClockScreen-ut.cpp  TimeParser-ut.cpp
